接口参数与路径调整；整理了部分代码和业务模型；完善索引和约束
