# dal/query/bot_response.gen.go
@@ -29,7 +29,7 @@ func newBotResponse(db *gorm.DB, opts ...gen.DOOption) botResponse {
 	tableName := _botResponse.botResponseDo.TableName()
 	_botResponse.ALL = field.NewAsterisk(tableName)
 	_botResponse.ID = field.NewUint(tableName, "id")
-	_botResponse.UnixTime = field.NewInt64(tableName, "unix_time")
+	_botResponse.CreatedAt = field.NewInt64(tableName, "created_at")
 	_botResponse.IntentId = field.NewString(tableName, "intent_id")
 	_botResponse.IntentName = field.NewString(tableName, "intent_name")
 
@@ -43,7 +43,7 @@ type botResponse struct {
 
 	ALL        field.Asterisk
 	ID         field.Uint
-	UnixTime   field.Int64
+	CreatedAt  field.Int64
 	IntentId   field.String
 	IntentName field.String
 
@@ -63,7 +63,7 @@ func (b botResponse) As(alias string) *botResponse {
 func (b *botResponse) updateTableName(table string) *botResponse {
 	b.ALL = field.NewAsterisk(table)
 	b.ID = field.NewUint(table, "id")
-	b.UnixTime = field.NewInt64(table, "unix_time")
+	b.CreatedAt = field.NewInt64(table, "created_at")
 	b.IntentId = field.NewString(table, "intent_id")
 	b.IntentName = field.NewString(table, "intent_name")
 
@@ -84,7 +84,7 @@ func (b *botResponse) GetFieldByName(fieldName string) (field.OrderExpr, bool) {
 func (b *botResponse) fillFieldMap() {
 	b.fieldMap = make(map[string]field.Expr, 4)
 	b.fieldMap["id"] = b.ID
-	b.fieldMap["unix_time"] = b.UnixTime
+	b.fieldMap["created_at"] = b.CreatedAt
 	b.fieldMap["intent_id"] = b.IntentId
 	b.fieldMap["intent_name"] = b.IntentName
 }
@@ -161,60 +161,22 @@ type IBotResponseDo interface {
 	UnderlyingDB() *gorm.DB
 	schema.Tabler
 
-	FilterWithNameAndRole(name string, role string) (result []model.BotResponse, err error)
-	SelectTopIntentId(n int) (result []map[string]interface{}, err error)
-	SelectTopIntentIdByTime(startTime int64, endTime int64, n int) (result []map[string]interface{}, err error)
-	GetIntentNameByIntentId(intentId string) (result string, err error)
-	SelectTopIntentByDailyRank(startTime int64, endTime int64, n int) (result []map[string]interface{}, err error)
-	SelectNewestIntentNamesByIntentIds(intentIds []string) (result []string, err error)
-	SelectIntentIdMapIntentName() (result map[string]string, err error)
+	SelectTopNIntentByTime(startTime int64, endTime int64, n int) (result []model.IntentResult, err error)
+	SelectTopNIntentByDailyRank(startTime int64, endTime int64, n int) (result []model.IntentResult, err error)
+	SelectIntentIdMapIntentName() (result []map[string]interface{}, err error)
 }
 
-// SELECT * FROM @@table WHERE name = @name{{if role !=""}} AND role = @role{{end}}
-func (b botResponseDo) FilterWithNameAndRole(name string, role string) (result []model.BotResponse, err error) {
-	var params []interface{}
-
-	var generateSQL strings.Builder
-	params = append(params, name)
-	generateSQL.WriteString("SELECT * FROM bot_response WHERE name = ? ")
-	if role != "" {
-		params = append(params, role)
-		generateSQL.WriteString("AND role = ? ")
-	}
-
-	var executeSQL *gorm.DB
-
-	executeSQL = b.UnderlyingDB().Raw(generateSQL.String(), params...).Find(&result)
-	err = executeSQL.Error
-	return
-}
-
-// select intent_id, count(*) cnt from `bot_response` group by intent_id order by cnt desc limit @n
-func (b botResponseDo) SelectTopIntentId(n int) (result []map[string]interface{}, err error) {
-	var params []interface{}
-
-	var generateSQL strings.Builder
-	params = append(params, n)
-	generateSQL.WriteString("select intent_id, count(*) cnt from `bot_response` group by intent_id order by cnt desc limit ? ")
-
-	var executeSQL *gorm.DB
-
-	executeSQL = b.UnderlyingDB().Raw(generateSQL.String(), params...).Find(&result)
-	err = executeSQL.Error
-	return
-}
-
-// select intent_id, count(*) cnt,
-// (select intent_name from bot_response where intent_id=br.intent_id  order by unix_time desc limit 1) as intent_name
-// from `bot_response` br where unix_time between @startTime and @endTime group by intent_id order by cnt desc limit @n
-func (b botResponseDo) SelectTopIntentIdByTime(startTime int64, endTime int64, n int) (result []map[string]interface{}, err error) {
+// select intent_id, count(*) count,
+// (select intent_name from bot_response where intent_id=br.intent_id  order by created_at desc limit 1) as intent_name
+// from `bot_response` br where created_at between @startTime and @endTime group by intent_id order by count desc limit @n
+func (b botResponseDo) SelectTopNIntentByTime(startTime int64, endTime int64, n int) (result []model.IntentResult, err error) {
 	var params []interface{}
 
 	var generateSQL strings.Builder
 	params = append(params, startTime)
 	params = append(params, endTime)
 	params = append(params, n)
-	generateSQL.WriteString("select intent_id, count(*) cnt, (select intent_name from bot_response where intent_id=br.intent_id order by unix_time desc limit 1) as intent_name from `bot_response` br where unix_time between ? and ? group by intent_id order by cnt desc limit ? ")
+	generateSQL.WriteString("select intent_id, count(*) count, (select intent_name from bot_response where intent_id=br.intent_id order by created_at desc limit 1) as intent_name from `bot_response` br where created_at between ? and ? group by intent_id order by count desc limit ? ")
 
 	var executeSQL *gorm.DB
 
@@ -223,32 +185,17 @@ func (b botResponseDo) SelectTopIntentIdByTime(startTime int64, endTime int64, n
 	return
 }
 
-// select intent_name from bot_response where intent_id = @intentId order by created_at desc limit 1
-func (b botResponseDo) GetIntentNameByIntentId(intentId string) (result string, err error) {
-	var params []interface{}
-
-	var generateSQL strings.Builder
-	params = append(params, intentId)
-	generateSQL.WriteString("select intent_name from bot_response where intent_id = ? order by created_at desc limit 1 ")
-
-	var executeSQL *gorm.DB
-
-	executeSQL = b.UnderlyingDB().Raw(generateSQL.String(), params...).Take(&result)
-	err = executeSQL.Error
-	return
-}
-
-// select intent_id, sum(count) total_cnt,
-// (select intent_name from bot_response where intent_id=di.intent_id order by unix_time desc limit 1) as intent_name
-// from `daily_intent` di where unix_time between @startTime and @endTime group by intent_id order by total_cnt desc limit @n
-func (b botResponseDo) SelectTopIntentByDailyRank(startTime int64, endTime int64, n int) (result []map[string]interface{}, err error) {
+// select intent_id, sum(count) count,
+// (select intent_name from bot_response where intent_id=di.intent_id order by created_at desc limit 1) as intent_name
+// from `daily_intent` di where date between @startTime and @endTime group by intent_id order by count desc limit @n
+func (b botResponseDo) SelectTopNIntentByDailyRank(startTime int64, endTime int64, n int) (result []model.IntentResult, err error) {
 	var params []interface{}
 
 	var generateSQL strings.Builder
 	params = append(params, startTime)
 	params = append(params, endTime)
 	params = append(params, n)
-	generateSQL.WriteString("select intent_id, sum(count) total_cnt, (select intent_name from bot_response where intent_id=di.intent_id order by unix_time desc limit 1) as intent_name from `daily_intent` di where unix_time between ? and ? group by intent_id order by total_cnt desc limit ? ")
+	generateSQL.WriteString("select intent_id, sum(count) count, (select intent_name from bot_response where intent_id=di.intent_id order by created_at desc limit 1) as intent_name from `daily_intent` di where date between ? and ? group by intent_id order by count desc limit ? ")
 
 	var executeSQL *gorm.DB
 
@@ -257,36 +204,14 @@ func (b botResponseDo) SelectTopIntentByDailyRank(startTime int64, endTime int64
 	return
 }
 
-// select intent_name from (select * from `bot_response` order by unix_time desc limit 100000000) as b
-// where intent_id in (@intentIds)  group by intent_id order by field(intent_id {{for _,id:=range intentIds}},@id{{end}} )
-func (b botResponseDo) SelectNewestIntentNamesByIntentIds(intentIds []string) (result []string, err error) {
-	var params []interface{}
-
+// select intent_id, intent_name from (select * from `bot_response` order by created_at desc limit 100000000) as b  group by intent_id
+func (b botResponseDo) SelectIntentIdMapIntentName() (result []map[string]interface{}, err error) {
 	var generateSQL strings.Builder
-	params = append(params, intentIds)
-	generateSQL.WriteString("select intent_name from (select * from `bot_response` order by unix_time desc limit 100000000) as b where intent_id in (?) group by intent_id order by field(intent_id ")
-	for _, id := range intentIds {
-		params = append(params, id)
-		generateSQL.WriteString(",? ")
-	}
-	generateSQL.WriteString(") ")
+	generateSQL.WriteString("select intent_id, intent_name from (select * from `bot_response` order by created_at desc limit 100000000) as b group by intent_id ")
 
 	var executeSQL *gorm.DB
 
-	executeSQL = b.UnderlyingDB().Raw(generateSQL.String(), params...).Find(&result)
-	err = executeSQL.Error
-	return
-}
-
-// select intent_id, intent_name from (select * from `bot_response` order by unix_time desc limit 100000000) as b  group by intent_id
-func (b botResponseDo) SelectIntentIdMapIntentName() (result map[string]string, err error) {
-	var generateSQL strings.Builder
-	generateSQL.WriteString("select intent_id, intent_name from (select * from `bot_response` order by unix_time desc limit 100000000) as b group by intent_id ")
-
-	result = make(map[string]string)
-	var executeSQL *gorm.DB
-
-	executeSQL = b.UnderlyingDB().Raw(generateSQL.String()).Take(result)
+	executeSQL = b.UnderlyingDB().Raw(generateSQL.String()).Find(&result)
 	err = executeSQL.Error
 	return
 }
